syntax = "proto3";

package umsclient;

option go_package = "./umsclient";

message MemberAddReq {
  string      Username = 1;
  string      Password = 2;
  string      Phone = 3;
}

message MemberAddResp {
  string Nickname = 1;
  string Token = 2;
  string Icon = 3;
}

message MemberLoginReq {
  string      Username = 1;
  string      Password = 2;
  string      Phone = 3;
}

message MemberLoginResp {
  string Nickname = 1;
  string Token = 2;
  string Icon = 3;
}

message MemberListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberListData{
  int64       Id = 1;
  int64       MemberLevelId = 2;
  string      Username = 3;
  string      Password = 4;
  string      Nickname = 5;
  string      Phone = 6;
  int64       Status = 7;
  string      CreateTime = 8;
  string      Icon = 9;
  int64       Gender = 10;
  string      Birthday = 11;
  string      City = 12;
  string      Job = 13;
  string      PersonalizedSignature = 14;
  int64       SourceType = 15;
  int64       Integration = 16;
  int64       Growth = 17;
  int64       LuckeyCount = 18;
  int64       HistoryIntegration = 19;
}

message MemberListResp {
  int64 total = 1;
  repeated  MemberListData list = 2;
}

message MemberUpdateReq {
  int64       Id = 1;
  int64       MemberLevelId = 2;
  string      Username = 3;
  string      Password = 4;
  string      Nickname = 5;
  string      Phone = 6;
  int64       Status = 7;
  string      CreateTime = 8;
  string      Icon = 9;
  int64       Gender = 10;
  string      Birthday = 11;
  string      City = 12;
  string      Job = 13;
  string      PersonalizedSignature = 14;
  int64       SourceType = 15;
  int64       Integration = 16;
  int64       Growth = 17;
  int64       LuckeyCount = 18;
  int64       HistoryIntegration = 19;
}

message MemberUpdateResp {
  string pong = 1;
}

message MemberDeleteReq {
  int64 id = 1;
}

message MemberDeleteResp {
  string pong = 1;
}

message Member {
  int64 id = 1;
  string phone = 2;
  string nickname =3;
  int64  gender = 4;
  string icon = 5;
  string personalized_signature = 6;
  string username=7;
  int64 levelId = 8;
  int64 parentId =9;
  double balance =10;
  string invitationCode =11;
  
}

message MemberAuth {
  int64  id = 1;
  int64  memberId = 2;
  string authType = 3;
  string authKey = 4;
}

message RegisterReq {
  string phone = 1;
  string nickname = 2;
  string password = 3;
  string authKey = 4;
  string authType = 5;
  string icon = 6;
}
message RegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
  int64 memberId=4;
}

message LoginReq {
  string  authType = 1;
  string authKey = 2;
  string  password = 3;
}
message LoginResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message MemberInfoReq {
  int64  id = 1;
}
message MemberInfoResp {
   Member member = 1;
}

message MemberAuthByAuthKeyReq {
  string  authKey = 1;
  string  authType = 2;
}
message MemberAuthByAuthKeyResp {
   MemberAuth memberAuth = 1;
}

message MemberAuthByMemberIdReq {
  int64  memberId = 1;
  string  authType = 2;
}
message MemberAuthyMemberIdResp {
   MemberAuth memberAuth = 1;
}

message GenerateTokenReq {
  int64 memberId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GrowthChangeHistoryAddReq {
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryAddResp {
  string pong = 1;
}

message GrowthChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message GrowthChangeHistoryListData{
  int64      Id = 1;
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryListResp {
  int64 total = 1;
  repeated  GrowthChangeHistoryListData list = 2;
}

message GrowthChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  string      CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message GrowthChangeHistoryUpdateResp {
  string pong = 1;
}

message GrowthChangeHistoryDeleteReq {
  int64 id = 1;
}

message GrowthChangeHistoryDeleteResp {
  string pong = 1;
}

message IntegrationChangeHistoryAddReq {
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryAddResp {
  string pong = 1;
}

message IntegrationChangeHistoryListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationChangeHistoryListData{
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryListResp {
  int64 total = 1;
  repeated  IntegrationChangeHistoryListData list = 2;
}

message IntegrationChangeHistoryUpdateReq {
  int64      Id = 1;
  int64      MemberId = 2;
  string  CreateTime = 3;
  int64      ChangeType = 4;
  int64      ChangeCount = 5;
  string      OperateMan = 6;
  string      OperateNote = 7;
  int64      SourceType = 8;
}

message IntegrationChangeHistoryUpdateResp {
  string pong = 1;
}

message IntegrationChangeHistoryDeleteReq {
  int64 id = 1;
}

message IntegrationChangeHistoryDeleteResp {
  string pong = 1;
}

message IntegrationConsumeSettingAddReq {
  int64 	DeductionPerAmount = 2;
  int64 	MaxPercentPerOrder = 3;
  int64 	UseUnit           = 4;
  int64 	CouponStatus     = 5;
}

message IntegrationConsumeSettingAddResp {
  string pong = 1;
}

message IntegrationConsumeSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message IntegrationConsumeSettingListData{
  int64 	Id = 1;
  int64 	DeductionPerAmount = 2;
  int64 	MaxPercentPerOrder = 3;
  int64 	UseUnit           = 4;
  int64 	CouponStatus     = 5;
}

message IntegrationConsumeSettingListResp {
  int64 total = 1;
  repeated  IntegrationConsumeSettingListData list = 2;
}

message IntegrationConsumeSettingUpdateReq {
  int64 	Id = 1;
  int64 	DeductionPerAmount = 2;
  int64 	MaxPercentPerOrder = 3;
  int64 	UseUnit           = 4;
  int64 	CouponStatus     = 5;
}

message IntegrationConsumeSettingUpdateResp {
  string pong = 1;
}

message IntegrationConsumeSettingDeleteReq {
  int64 id = 1;
}

message IntegrationConsumeSettingDeleteResp {
  string pong = 1;
}

message MemberLevelAddReq {
  string  	Name   = 2;
  int64   	GrowthPoint  = 3;
  int64   	DefaultStatus  = 4;
  int64 	FreeFreightPoint = 5;
  int64   	CommentGrowthPoint  = 6;
  int64   	PriviledgeFreeFreight = 7;
  int64   	PriviledgeSignIn    = 8;
  int64   	PriviledgeComment    = 9;
  int64   	PriviledgePromotion  = 10;
  int64   	PriviledgeMemberPrice = 11;
  int64   	PriviledgeBirthday   = 12;
  string  	Note           = 13;
}

message MemberLevelAddResp {
  string pong = 1;
}

message MemberLevelInfoReq {
  int64 id = 1;
}

message MemberLevelInfoResp {
  MemberLevelListData info = 2;
}

message MemberLevelListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberLevelListData{
  int64   	Id   = 1;
  string  	Name   = 2;
  int64   	GrowthPoint  = 3;
  int64   	DefaultStatus  = 4;
  int64 	FreeFreightPoint = 5;
  int64   	CommentGrowthPoint  = 6;
  int64   	PriviledgeFreeFreight = 7;
  int64   	PriviledgeSignIn    = 8;
  int64   	PriviledgeComment    = 9;
  int64   	PriviledgePromotion  = 10;
  int64   	PriviledgeMemberPrice = 11;
  int64   	PriviledgeBirthday   = 12;
  string  	Note           = 13;
  double  	DiscountRate           = 14;
}

message MemberLevelListResp {
  int64 total = 1;
  repeated  MemberLevelListData list = 2;
}

message MemberLevelUpdateReq {
  int64   	Id   = 1;
  string  	Name   = 2;
  int64   	GrowthPoint  = 3;
  int64   	DefaultStatus  = 4;
  int64 	FreeFreightPoint = 5;
  int64   	CommentGrowthPoint  = 6;
  int64   	PriviledgeFreeFreight = 7;
  int64   	PriviledgeSignIn    = 8;
  int64   	PriviledgeComment    = 9;
  int64   	PriviledgePromotion  = 10;
  int64   	PriviledgeMemberPrice = 11;
  int64   	PriviledgeBirthday   = 12;
  string  	Note           = 13;
}

message MemberLevelUpdateResp {
  string pong = 1;
}

message MemberLevelDeleteReq {
  int64 id = 1;
}

message MemberLevelDeleteResp {
  string pong = 1;
}

message MemberLoginLogAddReq {
  int64     	MemberId  = 2;
  string 	CreateTime = 3;
  string    	Ip        = 4;
  string    	City    = 5;
  int64     	LoginType  = 6;
  string    	Province   = 7;
}

message MemberLoginLogAddResp {
  string pong = 1;
}

message MemberLoginLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberLoginLogListData{
  int64     	Id   = 1;
  int64     	MemberId  = 2;
  string 	CreateTime = 3;
  string    	Ip        = 4;
  string    	City    = 5;
  int64     	LoginType  = 6;
  string    	Province   = 7;
}

message MemberLoginLogListResp {
  int64 total = 1;
  repeated  MemberLoginLogListData list = 2;
}

message MemberLoginLogUpdateReq {
  int64     	Id   = 1;
  int64     	MemberId  = 2;
  string 	CreateTime = 3;
  string    	Ip        = 4;
  string    	City    = 5;
  int64     	LoginType  = 6;
  string    	Province   = 7;
}

message MemberLoginLogUpdateResp {
  string pong = 1;
}

message MemberLoginLogDeleteReq {
  int64 id = 1;
}

message MemberLoginLogDeleteResp {
  string pong = 1;
}

message MemberMemberTagRelationAddReq {
  int64 	MemberId = 2;
  int64 	TagId   = 3;
}

message MemberMemberTagRelationAddResp {
  string pong = 1;
}

message MemberMemberTagRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberMemberTagRelationListData{
  int64 	Id  = 1;
  int64 	MemberId = 2;
  int64 	TagId   = 3;
}

message MemberMemberTagRelationListResp {
  int64 total = 1;
  repeated  MemberMemberTagRelationListData list = 2;
}

message MemberMemberTagRelationUpdateReq {
  int64 	Id  = 1;
  int64 	MemberId = 2;
  int64 	TagId   = 3;
}

message MemberMemberTagRelationUpdateResp {
  string pong = 1;
}

message MemberMemberTagRelationDeleteReq {
  int64 id = 1;
}

message MemberMemberTagRelationDeleteResp {
  string pong = 1;
}

message MemberPrepaidCardListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberPrepaidCardListData{
  int64	Id           = 1;
  string	name     = 2;
  double	FaceValue = 3;
  int64	ExpiredDay = 4;
  int64	status = 5;
  double	CommissionRate = 6;
  double	DiscountRate = 7;
  string	note = 8;
}

message MemberPrepaidCardListResp {
  int64 total = 1;
  repeated  MemberPrepaidCardListData list = 2;
}

message MemberPrepaidCardLogAddReq {
  int64	MemberId     = 2;
  int64	PrepaidCardId = 3;
  int64	OrderId = 4;
  string	OrderSn = 5;
  int64	FundsType = 6;
  int64	Amount = 7;
  string	CreateTime = 8;
  string	UpdateTime = 9;
  string Note = 10;
}

message MemberPrepaidCardLogAddResp {
  string pong = 1;
}

message MemberPrepaidCardLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberPrepaidCardLogListData{
  int64	Id           = 1;
  int64	MemberId     = 2;
  int64	PrepaidCardId = 3;
  int64	OrderId = 4;
  string	OrderSn = 5;
  int64	FundsType = 6;
  int64	Amount = 7;
  string	CreateTime = 8;
  string	UpdateTime = 9;
  string Note = 10;
}

message MemberPrepaidCardLogListResp {
  int64 total = 1;
  repeated  MemberPrepaidCardLogListData list = 2;
}


message MemberPrepaidCardRelationAddReq {
  int64	MemberId     = 2;
  int64	PrepaidCardId = 3;
  string	PrepaidCardSn = 4;
}

message MemberPrepaidCardRelationAddResp {
  string pong = 1;
}

message MemberPrepaidCardRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId=3;
}

message MemberPrepaidCardRelationListData{
  int64	Id           = 1;
  int64	MemberId     = 2;
  int64	PrepaidCardId = 3;
  string	PrepaidCardSn = 4;
  double	Balance = 5;
  int64	status = 6;
  string	CreateTime = 7;
  string	ExpiredTime = 8;
  string	UpdateTime = 9;
  string	note = 10;
}

message MemberPrepaidCardRelationListResp {
  int64 total = 1;
  repeated  MemberPrepaidCardRelationListData list = 2;
}

message MemberPrepaidCardRelationUpdateReq {
  int64	Id           = 1;
  int64	MemberId     = 2;
  int64	PrepaidCardId = 3;
}

message MemberPrepaidCardRelationUpdateResp {
  string pong = 1;
}

message MemberPrepaidCardRelationDeleteReq {
  int64 id = 1;
}

message MemberPrepaidCardRelationDeleteResp {
  string pong = 1;
}

message MemberProductCategoryRelationAddReq {
  int64	MemberId     = 2;
  int64	ProductCategoryId = 3;
}

message MemberProductCategoryRelationAddResp {
  string pong = 1;
}

message MemberProductCategoryRelationListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberProductCategoryRelationListData{
  int64	Id           = 1;
  int64	MemberId     = 2;
  int64	ProductCategoryId = 3;
}

message MemberProductCategoryRelationListResp {
  int64 total = 1;
  repeated  MemberProductCategoryRelationListData list = 2;
}

message MemberProductCategoryRelationUpdateReq {
  int64	Id           = 1;
  int64	MemberId     = 2;
  int64	ProductCategoryId = 3;
}

message MemberProductCategoryRelationUpdateResp {
  string pong = 1;
}

message MemberProductCategoryRelationDeleteReq {
  int64 id = 1;
}

message MemberProductCategoryRelationDeleteResp {
  string pong = 1;
}


message MemberReceiveAddressAddReq {
  int64  	MemberId     = 2;
  string 	Name         = 3;
  string 	PhoneNumber   = 4;
  int64  	DefaultStatus = 5;
  string 	PostCode      = 6;
  string 	Province      = 7;
  string 	City          = 8;
  string 	Region        = 9;
  string 	DetailAddress = 10;
  string  Address       = 11;
}

message MemberReceiveAddressAddResp {
  string pong = 1;
}

message MemberReceiveAddressListReq {
  int64 current = 1;
  int64 pageSize = 2;
  int64 MemberId = 3;
}

message MemberReceiveAddressListData{
  int64  	Id            = 1;
  int64  	MemberId     = 2;
  string 	Name         = 3;
  string 	PhoneNumber   = 4;
  int64  	DefaultStatus = 5;
  string 	PostCode      = 6;
  string 	Province      = 7;
  string 	City          = 8;
  string 	Region        = 9;
  string 	DetailAddress = 10;
  string  Address       = 11;
}

message MemberReceiveAddressListResp {
  int64 total = 1;
  repeated  MemberReceiveAddressListData list = 2;
}

message MemberReceiveAddressUpdateReq {
  int64  	Id            = 1;
  int64  	MemberId     = 2;
  string 	Name         = 3;
  string 	PhoneNumber   = 4;
  int64  	DefaultStatus = 5;
  string 	PostCode      = 6;
  string 	Province      = 7;
  string 	City          = 8;
  string 	Region        = 9;
  string 	DetailAddress = 10;
  string  Address       = 11;
}

message MemberReceiveAddressUpdateResp {
  string pong = 1;
}

message MemberReceiveAddressDeleteReq {
  int64 id = 1;
}

message MemberReceiveAddressDeleteResp {
  string pong = 1;
}



message MemberReceiveAddressQueryDetailReq {
  int64 MemberId = 1;
  int64 AddressID = 2;
}

message MemberReceiveAddressQueryDetailResp {
  int64  	Id            = 1;
  int64  	MemberId     = 2;
  string 	Name         = 3;
  string 	PhoneNumber   = 4;
  int64  	DefaultStatus = 5;
  string 	PostCode      = 6;
  string 	Province      = 7;
  string 	City          = 8;
  string 	Region        = 9;
  string 	DetailAddress = 10;
  string  Address       = 11;
}

message MemberRuleSettingAddReq {
  int64  	ContinueSignDay   = 2;
  int64  	ContinueSignPoint  = 3;
  int64	ConsumePerPoint    = 4;
  int64	LowOrderAmount     = 5;
  int64  	MaxPointPerOrder   = 6;
  int64  	Type         = 7;
}

message MemberRuleSettingAddResp {
  string pong = 1;
}

message MemberRuleSettingListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberRuleSettingListData{
  int64  	Id           = 1;
  int64  	ContinueSignDay   = 2;
  int64  	ContinueSignPoint  = 3;
  int64	ConsumePerPoint    = 4;
  int64	LowOrderAmount     = 5;
  int64  	MaxPointPerOrder   = 6;
  int64  	Type         = 7;
}

message MemberRuleSettingListResp {
  int64 total = 1;
  repeated  MemberRuleSettingListData list = 2;
}

message MemberRuleSettingUpdateReq {
  int64  	Id           = 1;
  int64  	ContinueSignDay   = 2;
  int64  	ContinueSignPoint  = 3;
  int64	ConsumePerPoint    = 4;
  int64	LowOrderAmount     = 5;
  int64  	MaxPointPerOrder   = 6;
  int64  	Type         = 7;
}

message MemberRuleSettingUpdateResp {
  string pong = 1;
}

message MemberRuleSettingDeleteReq {
  int64 id = 1;
}

message MemberRuleSettingDeleteResp {
  string pong = 1;
}

message MemberStatisticsInfoAddReq {
  int64     	MemberId   = 2;
  int64   	ConsumeAmount    = 3;
  int64     	OrderCount    = 4;
  int64     	CouponCount   = 5;
  int64     	CommentCount     = 6;
  int64     	ReturnOrderCount  = 7;
  int64     	LoginCount         = 8;
  int64     	AttendCount         = 9;
  int64     	FansCount           = 10;
  int64     	CollectProductCount = 11;
  int64     	CollectSubjectCount = 12;
  int64     	CollectTopicCount   = 13;
  int64     	CollectCommentCount = 14;
  int64     	InviteFriendCount   = 15;
  string 	RecentOrderTime     = 16;
}

message MemberStatisticsInfoAddResp {
  string pong = 1;
}

message MemberStatisticsInfoListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberStatisticsInfoListData{
  int64     	Id    = 1;
  int64     	MemberId   = 2;
  int64   	ConsumeAmount    = 3;
  int64     	OrderCount    = 4;
  int64     	CouponCount   = 5;
  int64     	CommentCount     = 6;
  int64     	ReturnOrderCount  = 7;
  int64     	LoginCount         = 8;
  int64     	AttendCount         = 9;
  int64     	FansCount           = 10;
  int64     	CollectProductCount = 11;
  int64     	CollectSubjectCount = 12;
  int64     	CollectTopicCount   = 13;
  int64     	CollectCommentCount = 14;
  int64     	InviteFriendCount   = 15;
  string 	RecentOrderTime     = 16;
}

message MemberStatisticsInfoListResp {
  int64 total = 1;
  repeated  MemberStatisticsInfoListData list = 2;
}

message MemberStatisticsInfoUpdateReq {
  int64     	Id    = 1;
  int64     	MemberId   = 2;
  int64   	ConsumeAmount    = 3;
  int64     	OrderCount    = 4;
  int64     	CouponCount   = 5;
  int64     	CommentCount     = 6;
  int64     	ReturnOrderCount  = 7;
  int64     	LoginCount         = 8;
  int64     	AttendCount         = 9;
  int64     	FansCount           = 10;
  int64     	CollectProductCount = 11;
  int64     	CollectSubjectCount = 12;
  int64     	CollectTopicCount   = 13;
  int64     	CollectCommentCount = 14;
  int64     	InviteFriendCount   = 15;
  string 	RecentOrderTime     = 16;
}

message MemberStatisticsInfoUpdateResp {
  string pong = 1;
}

message MemberStatisticsInfoDeleteReq {
  int64 id = 1;
}

message MemberStatisticsInfoDeleteResp {
  string pong = 1;
}


message MemberTagAddReq {
  string  	Name    = 2;
  int64   	FinishOrderCount = 3;
  int64 	FinishOrderAmount= 4;
}

message MemberTagAddResp {
  string pong = 1;
}

message MemberTagListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTagListData{
  int64   	Id      = 1;
  string  	Name    = 2;
  int64   	FinishOrderCount = 3;
  int64 	FinishOrderAmount= 4;
}

message MemberTagListResp {
  int64 total = 1;
  repeated  MemberTagListData list = 2;
}

message MemberTagUpdateReq {
  int64   	Id      = 1;
  string  	Name    = 2;
  int64   	FinishOrderCount = 3;
  int64 	FinishOrderAmount= 4;
}

message MemberTagUpdateResp {
  string pong = 1;
}

message MemberTagDeleteReq {
  int64 id = 1;
}

message MemberTagDeleteResp {
  string pong = 1;
}


message MemberTaskAddReq {
  string 	Name    = 2;
  int64  	Growth     =3;
  int64  	Intergration  = 4;
  int64  	Type         = 5;
}

message MemberTaskAddResp {
  string pong = 1;
}

message MemberTaskListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message MemberTaskListData{
  int64  	Id    = 1;
  string 	Name    = 2;
  int64  	Growth     =3;
  int64  	Intergration  = 4;
  int64  	Type         = 5;
}

message MemberTaskListResp {
  int64 total = 1;
  repeated  MemberTaskListData list = 2;
}

message MemberTaskUpdateReq {
  int64  	Id    = 1;
  string 	Name    = 2;
  int64  	Growth     =3;
  int64  	Intergration  = 4;
  int64  	Type         = 5;
}

message MemberTaskUpdateResp {
  string pong = 1;
}

message MemberTaskDeleteReq {
  int64 id = 1;
}

message MemberTaskDeleteResp {
  string pong = 1;
}

service Ums {

  rpc MemberAdd(MemberAddReq) returns(MemberAddResp);
  rpc MemberLogin(MemberLoginReq) returns(MemberLoginResp);
  rpc MemberList(MemberListReq) returns(MemberListResp);
  rpc MemberUpdate(MemberUpdateReq) returns(MemberUpdateResp);
  rpc MemberDelete(MemberDeleteReq) returns(MemberDeleteResp);

  rpc login(LoginReq) returns(LoginResp);
  rpc register(RegisterReq) returns(RegisterResp);
  rpc MemberInfo(MemberInfoReq) returns(MemberInfoResp);
  rpc MemberAuthByAuthKey(MemberAuthByAuthKeyReq) returns(MemberAuthByAuthKeyResp);
  rpc MemberAuthByMemberId(MemberAuthByMemberIdReq) returns(MemberAuthyMemberIdResp);
  rpc GenerateToken(GenerateTokenReq) returns(GenerateTokenResp);

  rpc GrowthChangeHistoryAdd(GrowthChangeHistoryAddReq) returns(GrowthChangeHistoryAddResp);
  rpc GrowthChangeHistoryList(GrowthChangeHistoryListReq) returns(GrowthChangeHistoryListResp);
  rpc GrowthChangeHistoryUpdate(GrowthChangeHistoryUpdateReq) returns(GrowthChangeHistoryUpdateResp);
  rpc GrowthChangeHistoryDelete(GrowthChangeHistoryDeleteReq) returns(GrowthChangeHistoryDeleteResp);

  rpc IntegrationChangeHistoryAdd(IntegrationChangeHistoryAddReq) returns(IntegrationChangeHistoryAddResp);
  rpc IntegrationChangeHistoryList(IntegrationChangeHistoryListReq) returns(IntegrationChangeHistoryListResp);
  rpc IntegrationChangeHistoryUpdate(IntegrationChangeHistoryUpdateReq) returns(IntegrationChangeHistoryUpdateResp);
  rpc IntegrationChangeHistoryDelete(IntegrationChangeHistoryDeleteReq) returns(IntegrationChangeHistoryDeleteResp);

  rpc IntegrationConsumeSettingAdd(IntegrationConsumeSettingAddReq) returns(IntegrationConsumeSettingAddResp);
  rpc IntegrationConsumeSettingList(IntegrationConsumeSettingListReq) returns(IntegrationConsumeSettingListResp);
  rpc IntegrationConsumeSettingUpdate(IntegrationConsumeSettingUpdateReq) returns(IntegrationConsumeSettingUpdateResp);
  rpc IntegrationConsumeSettingDelete(IntegrationConsumeSettingDeleteReq) returns(IntegrationConsumeSettingDeleteResp);

  rpc MemberLevelAdd(MemberLevelAddReq) returns(MemberLevelAddResp);
  rpc MemberLevelInfo(MemberLevelInfoReq) returns(MemberLevelInfoResp);
  rpc MemberLevelList(MemberLevelListReq) returns(MemberLevelListResp);
  rpc MemberLevelUpdate(MemberLevelUpdateReq) returns(MemberLevelUpdateResp);
  rpc MemberLevelDelete(MemberLevelDeleteReq) returns(MemberLevelDeleteResp);

  rpc MemberLoginLogAdd(MemberLoginLogAddReq) returns(MemberLoginLogAddResp);
  rpc MemberLoginLogList(MemberLoginLogListReq) returns(MemberLoginLogListResp);
  rpc MemberLoginLogUpdate(MemberLoginLogUpdateReq) returns(MemberLoginLogUpdateResp);
  rpc MemberLoginLogDelete(MemberLoginLogDeleteReq) returns(MemberLoginLogDeleteResp);

  rpc MemberMemberTagRelationAdd(MemberMemberTagRelationAddReq) returns(MemberMemberTagRelationAddResp);
  rpc MemberMemberTagRelationList(MemberMemberTagRelationListReq) returns(MemberMemberTagRelationListResp);
  rpc MemberMemberTagRelationUpdate(MemberMemberTagRelationUpdateReq) returns(MemberMemberTagRelationUpdateResp);
  rpc MemberMemberTagRelationDelete(MemberMemberTagRelationDeleteReq) returns(MemberMemberTagRelationDeleteResp);

  rpc MemberPrepaidCardList(MemberPrepaidCardListReq) returns(MemberPrepaidCardListResp);

  rpc MemberPrepaidCardLogAdd(MemberPrepaidCardLogAddReq) returns(MemberPrepaidCardLogAddResp);
  rpc MemberPrepaidCardLogList(MemberPrepaidCardLogListReq) returns(MemberPrepaidCardLogListResp);
 
  rpc MemberPrepaidCardRelationAdd(MemberPrepaidCardRelationAddReq) returns(MemberPrepaidCardRelationAddResp);
  rpc MemberPrepaidCardRelationList(MemberPrepaidCardRelationListReq) returns(MemberPrepaidCardRelationListResp);
  rpc MemberPrepaidCardRelationUpdate(MemberPrepaidCardRelationUpdateReq) returns(MemberPrepaidCardRelationUpdateResp);
  rpc MemberPrepaidCardRelationDelete(MemberPrepaidCardRelationDeleteReq) returns(MemberPrepaidCardRelationDeleteResp);

  rpc MemberProductCategoryRelationAdd(MemberProductCategoryRelationAddReq) returns(MemberProductCategoryRelationAddResp);
  rpc MemberProductCategoryRelationList(MemberProductCategoryRelationListReq) returns(MemberProductCategoryRelationListResp);
  rpc MemberProductCategoryRelationUpdate(MemberProductCategoryRelationUpdateReq) returns(MemberProductCategoryRelationUpdateResp);
  rpc MemberProductCategoryRelationDelete(MemberProductCategoryRelationDeleteReq) returns(MemberProductCategoryRelationDeleteResp);

  rpc MemberReceiveAddressAdd(MemberReceiveAddressAddReq) returns(MemberReceiveAddressAddResp);
  rpc MemberReceiveAddressList(MemberReceiveAddressListReq) returns(MemberReceiveAddressListResp);
  rpc MemberReceiveAddressUpdate(MemberReceiveAddressUpdateReq) returns(MemberReceiveAddressUpdateResp);
  rpc MemberReceiveAddressDelete(MemberReceiveAddressDeleteReq) returns(MemberReceiveAddressDeleteResp);
  rpc MemberReceiveAddressQueryDetail(MemberReceiveAddressQueryDetailReq) returns(MemberReceiveAddressQueryDetailResp);

  rpc MemberRuleSettingAdd(MemberRuleSettingAddReq) returns(MemberRuleSettingAddResp);
  rpc MemberRuleSettingList(MemberRuleSettingListReq) returns(MemberRuleSettingListResp);
  rpc MemberRuleSettingUpdate(MemberRuleSettingUpdateReq) returns(MemberRuleSettingUpdateResp);
  rpc MemberRuleSettingDelete(MemberRuleSettingDeleteReq) returns(MemberRuleSettingDeleteResp);

  rpc MemberStatisticsInfoAdd(MemberStatisticsInfoAddReq) returns(MemberStatisticsInfoAddResp);
  rpc MemberStatisticsInfoList(MemberStatisticsInfoListReq) returns(MemberStatisticsInfoListResp);
  rpc MemberStatisticsInfoUpdate(MemberStatisticsInfoUpdateReq) returns(MemberStatisticsInfoUpdateResp);
  rpc MemberStatisticsInfoDelete(MemberStatisticsInfoDeleteReq) returns(MemberStatisticsInfoDeleteResp);

  rpc MemberTagAdd(MemberTagAddReq) returns(MemberTagAddResp);
  rpc MemberTagList(MemberTagListReq) returns(MemberTagListResp);
  rpc MemberTagUpdate(MemberTagUpdateReq) returns(MemberTagUpdateResp);
  rpc MemberTagDelete(MemberTagDeleteReq) returns(MemberTagDeleteResp);

  rpc MemberTaskAdd(MemberTaskAddReq) returns(MemberTaskAddResp);
  rpc MemberTaskList(MemberTaskListReq) returns(MemberTaskListResp);
  rpc MemberTaskUpdate(MemberTaskUpdateReq) returns(MemberTaskUpdateResp);
  rpc MemberTaskDelete(MemberTaskDeleteReq) returns(MemberTaskDeleteResp);

}
